<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_open" android:title="@string/settingsOpenG"
        android:orderInCategory="100" app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_openBrowser" android:title="@string/settingsOpenBrowser"
        android:orderInCategory="100" app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_openBrowserWiki" android:title="@string/settingsOpenBrowserWiki"
        android:orderInCategory="100" app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_rotate" android:title="@string/settingsRotate"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_mirror" android:title="@string/settingsMirror"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_rotate_result" android:title="@string/settingsRotateResult"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_mirror_result" android:title="@string/settingsMirrorResult"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />


</menu>
