<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:id="@+id/main_fragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" android:id="@+id/buttonlayout">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fromGallery"
            style="@style/button_text"
            android:id="@+id/buttonGallery"
            android:gravity="center"
            android:background="@drawable/blue_button"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_photo"
            style="@style/button_text"
            android:id="@+id/buttonPhoto"
            android:gravity="center"
            android:background="@drawable/blue_button"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:weightSum="2"
        android:id="@+id/myFotoBox"
        android:layout_below="@+id/buttonlayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/buttonStart">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageView"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:layout_gravity="right"
            android:layout_margin="1px"
            android:layout_weight="1"
            android:background="@drawable/border_blue"
            android:padding="5dp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/newImageView"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:layout_gravity="left"
            android:layout_margin="1px"
            android:layout_weight="1"
            android:background="@drawable/border_red"
            android:padding="5dp" />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/startText"
        style="@style/button_text"
        android:id="@+id/buttonStart"
        android:enabled="false"
        android:gravity="center"
        android:background="@drawable/red_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
